// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 renders correctly with color prop 1`] = `
.c0 {
  color: #002;
}

<h1
  className="sc-fzomME c0"
  color="red"
/>
`;

exports[`H1 renders correctly with floatLeft prop 1`] = `
<h1
  className="sc-fzomME "
/>
`;

exports[`H1 renders correctly with floatRight prop 1`] = `
<h1
  className="sc-fzomME "
/>
`;

exports[`H1 renders correctly with no props 1`] = `
<h1
  className="sc-fzomME "
/>
`;

exports[`H1 renders correctly with size prop 1`] = `
.c0 {
  font-size: 36px;
}

<h1
  className="sc-fzomME c0"
  size="31px"
/>
`;

exports[`H1 renders correctly with weight prop 1`] = `
.c0 {
  font-weight: normal;
}

<h1
  className="sc-fzomME c0"
/>
`;

exports[`H2 renders correctly with color prop 1`] = `
.c0 {
  color: red;
  font-size: 28px;
  font-weight: normal;
}

<h2
  className="c0"
  color="red"
/>
`;

exports[`H2 renders correctly with floatLeft prop 1`] = `
.c0 {
  color: #002;
  font-size: 28px;
  font-weight: normal;
}

<h2
  className="c0"
/>
`;

exports[`H2 renders correctly with floatRight prop 1`] = `
.c0 {
  color: #002;
  font-size: 28px;
  font-weight: normal;
}

<h2
  className="c0"
/>
`;

exports[`H2 renders correctly with no props 1`] = `
.c0 {
  color: #002;
  font-size: 28px;
  font-weight: normal;
}

<h2
  className="c0"
/>
`;

exports[`H2 renders correctly with size prop 1`] = `
.c0 {
  color: #002;
  font-size: 31px;
  font-weight: normal;
}

<h2
  className="c0"
  size="31px"
/>
`;

exports[`H2 renders correctly with weight prop 1`] = `
.c0 {
  color: #002;
  font-size: 28px;
  font-weight: bold;
}

<h2
  className="c0"
/>
`;

exports[`H3 renders correctly with color prop 1`] = `
.c0 {
  color: #007;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
  color="#007"
/>
`;

exports[`H3 renders correctly with floatLeft prop 1`] = `
.c0 {
  color: #007;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
  color="#007"
/>
`;

exports[`H3 renders correctly with floatRight prop 1`] = `
.c0 {
  color: #007;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
  color="#007"
/>
`;

exports[`H3 renders correctly with no props 1`] = `
.c0 {
  color: #007;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
  color="#007"
/>
`;

exports[`H3 renders correctly with size prop 1`] = `
.c0 {
  color: #007;
  font-size: 31px;
  font-weight: normal;
}

<h3
  className="c0"
  color="#007"
  size="31px"
/>
`;

exports[`H3 renders correctly with weight prop 1`] = `
.c0 {
  color: #007;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
  color="#007"
/>
`;

exports[`H4 renders correctly with color prop 1`] = `
.c0 {
  font-size: 18px;
  font-weight: normal;
}

<h4
  className="sc-fzoJMP c0"
  color={null}
/>
`;

exports[`H4 renders correctly with floatLeft prop 1`] = `
.c0 {
  font-size: 18px;
  font-weight: normal;
}

<h4
  className="sc-fzoJMP c0"
  color={null}
/>
`;

exports[`H4 renders correctly with floatRight prop 1`] = `
.c0 {
  font-size: 18px;
  font-weight: normal;
}

<h4
  className="sc-fzoJMP c0"
  color={null}
/>
`;

exports[`H4 renders correctly with no props 1`] = `
.c0 {
  font-size: 18px;
  font-weight: normal;
}

<h4
  className="sc-fzoJMP c0"
  color={null}
/>
`;

exports[`H4 renders correctly with size prop 1`] = `
.c0 {
  font-size: 31px;
  font-weight: normal;
}

<h4
  className="sc-fzoJMP c0"
  color={null}
  size="31px"
/>
`;

exports[`H4 renders correctly with weight prop 1`] = `
.c0 {
  font-size: 18px;
  font-weight: bold;
}

<h4
  className="sc-fzoJMP c0"
  color={null}
/>
`;

exports[`H5 renders correctly with clearLeft prop 1`] = `
.c0 {
  color: #002;
  font-size: 14px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#002"
/>
`;

exports[`H5 renders correctly with clearRight prop 1`] = `
.c0 {
  color: #002;
  font-size: 14px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#002"
/>
`;

exports[`H5 renders correctly with color prop 1`] = `
.c0 {
  color: #002;
  font-size: 14px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#002"
/>
`;

exports[`H5 renders correctly with floatLeft prop 1`] = `
.c0 {
  color: #002;
  font-size: 14px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#002"
/>
`;

exports[`H5 renders correctly with floatRight prop 1`] = `
.c0 {
  color: #002;
  font-size: 14px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#002"
/>
`;

exports[`H5 renders correctly with no props 1`] = `
.c0 {
  color: #002;
  font-size: 14px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#002"
/>
`;

exports[`H5 renders correctly with size prop 1`] = `
.c0 {
  color: #002;
  font-size: 31px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#002"
  size="31px"
/>
`;

exports[`H5 renders correctly with weight prop 1`] = `
.c0 {
  color: #002;
  font-size: 14px;
  font-weight: bold;
}

<h5
  className="c0"
  color="#002"
/>
`;

exports[`Label renders correctly with no props 1`] = `
.c0 {
  display: block;
  color: #002;
  font-size: 14px;
  font-weight: normal;
}

<label
  className="c0"
/>
`;

exports[`P1 renders correctly with no props 1`] = `
.c0 {
  margin: 0;
  color: #002;
  font-size: 1rem;
  font-weight: normal;
}

<p
  className="c0"
/>
`;

exports[`S1 renders correctly with no props 1`] = `
.c0 {
  color: #002;
  font-size: 12px;
  font-weight: normal;
}

<span
  className="c0"
/>
`;
